# charmcraft-profile-tools

./: .gitignore  README.md  inplace.py  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: charm-checks.yaml  code-checks.yaml  current.yaml  integration-tests.yaml  zizmor.yaml
.implement/: justfile  kubernetes-extra.py
.scripts/: check_charmcraft_root.sh
kubernetes/: charmcraft.yaml  pyproject.toml
kubernetes-extra/: LICENSE  charmcraft.yaml  pyproject.toml
kubernetes-extra/src/: charm.py  my_application.py
kubernetes-extra/tests/integration/: test_charm.py
kubernetes-extra/tests/unit/: test_charm.py
kubernetes/src/: charm.py  my_application.py
kubernetes/tests/integration/: conftest.py  test_charm.py
kubernetes/tests/unit/: test_charm.py
machine/: charmcraft.yaml  pyproject.toml  tox.ini
machine/src/: charm.py  my_application.py
machine/tests/integration/: conftest.py  test_charm.py
machine/tests/unit/: test_charm.py
src/charmcraft_profile_tools/: __init__.py  _charmcraft.py  _errors.py  _extra.py  _self.py  _steps.py
