[project]
name = "charmcraft-profile-tools"
version = "0.0.0"  # Not significant. These tools should always be run from source.
description = "TODO"
authors = [
    { name = "The Charm Tech team at Canonical Ltd." },
]
requires-python = ">= 3.11"  # Because we want tomllib.
dependencies = []

[project.scripts]
kubernetes = "charmcraft_profile_tools._charmcraft:init_kubernetes"
kubernetes-extra = "charmcraft_profile_tools._extra:implement_kubernetes_extra"
machine = "charmcraft_profile_tools._charmcraft:init_machine"

[dependency-groups]
dev = [
    "ruff",
    "ty>=0.0.28",
]

[build-system]
requires = [
    "uv_build>=0.11,<0.12",
]
build-backend = "uv_build"

[tool.ruff]
exclude = [
    "kubernetes",
    "kubernetes-extra",
    "machine",
]
format.quote-style = "single"
line-length = 99

[tool.ty.src]
exclude = [
    "kubernetes",
    "kubernetes-extra",
    "machine",
]
